refactors into smaller methods and fills other checkstyle requirements, adds generated map to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /dungeongenerator/nbproject/private/
 /dungeongenerator/target/
 /dungeongenerator/licenseheader.txt
-
+/dungeongenerator/generated_map.txt
