adds javadocs and fixes style

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-/dungeongenerator/nbproject/private/
-/dungeongenerator/target/
-/dungeongenerator/licenseheader.txt
-/dungeongenerator/generated_map.txt
-/dungeongenerator/nbproject/
-/code_review/
-/demo_maps/
+dungeongenerator/target/*
+!dungeongenerator/target/site/
+
+dungeongenerator/target/site/*
+!dungeongenerator/target/site/apidocs/
+
+dungeongenerator/licenseheader.txt
+dungeongenerator/generated_map.txt
+dungeongenerator/nbproject/
+code_review/
+demo_maps/
